kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porto-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porto-backend-api
  template:
    metadata:
      labels:
        app: porto-backend-api
    spec:
      containers:
      - name: porto-backend-api
        image: maratonaaksacr.azurecr.io/porto-backend:v1.0.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: porto-backend-service
spec:
  selector:
    app: porto-backend-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: porto-backend-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: porto-backend-api.add1d436085848758dc8.eastus.aksapp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: porto-backend-service
              servicePort: http
